--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-#cd /home/claude && cat > requirements.txt << 'EOF'
-streamlit
-pandas
-plotly
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.17.0
 EOF
